--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^5.6.7
   html: ^0.15.6
   intl: ^0.20.2
+  firebase_core_web: ^2.24.1
 
 dev_dependencies:
   flutter_test:
