--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   html: ^0.15.6
   intl: ^0.20.2
   firebase_core_web: ^2.24.1
+  go_router: ^16.0.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
