--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_core_web: ^2.24.1
   go_router: ^16.0.0
   shimmer: ^3.0.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
